--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+* {
+  margin: 0;
+  background-color: beige;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App > h1 {
+  margin: 20px;
+  font-size: 70px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.progressBar {
+  width: 200px;
+}
+
+.searchBar {
+  border: 1px solid;
+  font-size: 25px;
+  padding: 10px;
+  width: 800px;
+  font-weight: bold;
+}
+
+.searchBar::placeholder {
+  font-weight: normal;
+}
+
+.imageContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  border: 1px solid black;
+  gap: 10px;
+  width: 1024px;
+  margin: 20px;
+}
+
+.image {
+  margin: 10px;
+}
+
+.img {
+  width: 300px;
+  height: 300px;
+  object-fit: contain;
 }
